--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         return;
                     }
                     const originalMarkdown = await response.text();
-                    const modifiedMarkdown = originalMarkdown.replace(/(?<!-)--(?!-)/g, '');
+                    const modifiedMarkdown = originalMarkdown.replace(/^\s*--(?!-)/gm, '');
                     slideshowOptions.source = modifiedMarkdown; // Use the 'source' property
 
                 } else {
